Subsetting data fix.

--- a/17_differential_abundance.Rmd
+++ b/17_differential_abundance.Rmd
@@ -51,8 +51,8 @@ na_summary
 We drop samples with na values at the covariates (features) under analysis: 
 
 ```{r}
-tse <- subsetSamples(tse, !is.na(colData(tse)$Delivery_Mode))
-tse <- subsetSamples(tse, !is.na(colData(tse)$Age_Years))
+tse <- tse[ , !is.na(colData(tse)$Delivery_Mode) ]
+tse <- tse[ , !is.na(colData(tse)$Age_Years) ]
 tse
 ```
 
