--- a/17_differential_abundance.Rmd
+++ b/17_differential_abundance.Rmd
@@ -14,20 +14,20 @@ In this section we will work with one of the [openly available datasets](https:/
 *How to do DAA*
 
 There are many tools to perform DAA. The most popular tools, without going into evaluating whether or not they perform well for this task, are:  
-- [ALDEx2](https://bioconductor.org/packages/release/bioc/html/ALDEx2.html) 
-- [ANCOM](https://github.com/FrederickHuangLin/ANCOM) [(BC)](https://bioconductor.org/packages/release/bioc/html/ANCOMBC.html)
-- [corncob](https://cran.r-project.org/web/packages/corncob/index.html)
-- [DESeq2](https://bioconductor.org/packages/release/bioc/html/DESeq2.html)
-- [edge](https://bioconductor.org/packages/release/bioc/html/edgeR.html)
-- [LEFse](https://bioconductor.org/packages/release/bioc/html/lefser.html)
-- [MaAsLin2](https://www.bioconductor.org/packages/release/bioc/html/Maaslin2.html)
-- [metagenomeSeq](https://www.bioconductor.org/packages/release/bioc/html/metagenomeSeq.html)
-- [limma voom](https://bioconductor.org/packages/release/bioc/html/limma.html)
-- [t-test](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/t.test)
-- [Wilcoxon test](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/wilcox.test)
+- [ALDEx2](https://bioconductor.org/packages/release/bioc/html/ALDEx2.html)   
+- [ANCOM](https://github.com/FrederickHuangLin/ANCOM) [(BC)](https://bioconductor.org/packages/release/bioc/html/ANCOMBC.html)  
+- [corncob](https://cran.r-project.org/web/packages/corncob/index.html)  
+- [DESeq2](https://bioconductor.org/packages/release/bioc/html/DESeq2.html)  
+- [edge](https://bioconductor.org/packages/release/bioc/html/edgeR.html)  
+- [LEFse](https://bioconductor.org/packages/release/bioc/html/lefser.html)  
+- [MaAsLin2](https://www.bioconductor.org/packages/release/bioc/html/Maaslin2.html)  
+- [metagenomeSeq](https://www.bioconductor.org/packages/release/bioc/html/metagenomeSeq.html)  
+- [limma voom](https://bioconductor.org/packages/release/bioc/html/limma.html)  
+- [t-test](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/t.test)  
+- [Wilcoxon test](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/wilcox.test)  
 
 
-We recommend you to have a look at [Nearing et al.](https://www.biorxiv.org/content/10.1101/2021.05.10.443486v1.full) who compared all these listed methods across 38 diverse datasets. Because different methods have different approaches (parametric vs non-parametric, different normalization techiniques etc.) to perform the same task (test differential abundance), results can differ between methods. Unfortunately, as Nearing et al. point out, they differ disturbingly much. Therefore, it is highly recommended to pick several methods to get an idea about how robust and potentially reproducible your findings are depending on the method. In this section we demonstrate 3 methods (ANCOM-BC, Wilcoxon-test and Deseq2) and will compare the results between them. Note that the focus lies on illustrating how to perform DAA. Therefore, we picked a dataset that has microbial abundances in a TSE object as well as a grouping variable in the sample data. Note that the purpose of this section is to show how to perform DAA in R, not how to correctly do causal inference. E.g. there might be confounding factors that might drive (the absence of) differences between the shown groups that we ignore for simplicity.
+We recommend you to have a look at [Nearing et al.](https://www.biorxiv.org/content/10.1101/2021.05.10.443486v1.full) who compared all these listed methods across 38 diverse datasets. Because different methods have different approaches (parametric vs non-parametric, different normalization techiniques etc.) to perform the same task (test differential abundance), results can differ between methods. Unfortunately, as Nearing et al. point out, they differ disturbingly much. Therefore, it is highly recommended to pick several methods to get an idea about how robust and potentially reproducible your findings are depending on the method. In this section we demonstrate 3 methods (ANCOM-BC, Wilcoxon-test and Deseq2) and will compare the results between them. Note that the purpose of this section is to show how to perform DAA in R, not how to correctly do causal inference. E.g. there might be confounding factors that might drive (the absence of) differences between the shown groups that we ignore for simplicity. Furthermore, we picked a dataset that merely has microbial abundances in a TSE object as well as a grouping variable in the sample data. We simplify the analysis by only including 2 of the 3 groups. 
 
 
 
