Added acknowledgments and reorganized initial chapters

--- a/book.bib
+++ b/book.bib
@@ -1,3 +1,56 @@
+@Book{Holmes2019,
+  author =	 {Susan Holmes and Wolfgang Huber},
+  title =	 {Modern Statistics for Modern Biology},
+  publisher =	 {Cambridge University Press},
+  address =	 {New York, NY},
+  year =	 2019,
+  url =		 {https://www.huber.embl.de/msmb/}
+}
+
+
+@Book{Amezquita2020,
+  author =	 {Robert Amezquita and Aaron Lun and Stephanie Hicks
+                  and Raphael Gottardo},
+  title =	 {Orchestrating Single-Cell Analysis with
+                  Bioconductor},
+  publisher =	 {Bioconductor},
+  year =	 2020,
+  url =		 {https://bioconductor.org/books/release/OSCA/}
+}
+
+@Book{McElreath2020,
+  author =	 {Richard McElreath},
+  title =	 {Statistical Rethinking},
+  publisher =	 {Chapman and Hall/CRC},
+  year =	 2020,
+  note =	 {with implementation by Solomon Kurz:
+                  https://bookdown.org/ajkurz/Statistical_Rethinking_recoded/}
+}
+
+
+@Book{Grolemund2017,
+  author =	 {Garret Grolemund and Hadley Wickham},
+  title =	 {R for Data Science},
+  publisher =	 {O’Reilly},
+  year =	 2017,
+  url =		 {https://r4ds.had.co.nz/}
+}
+
+
+
+
+@article{McMurdie2013,
+  author =	 {Paul J McMurdie and Susan Holmes},
+  title =	 {{\it phyloseq:} An R Package for Reproducible
+                  Interactive Analysis and Graphics of Microbiome
+                  Census Data},
+  journal =	 {PLoS ONE},
+  volume =	 8,
+  issue =	 4,
+  pages =	 {e61217},
+  doi =		 {10.1371/journal.pone.0061217},
+  year =	 2013
+}
 
 
 
