Added ref to Pasolli 2017

--- a/01_intro.Rmd
+++ b/01_intro.Rmd
@@ -62,7 +62,11 @@ momentum. Other key contributors include Tuomas Borman, Henrik
 Eckermann, Chandler Ross, and Chouaib Benchraka, additional [pull
 requests](https://github.com/microbiome/OMA/graphs/contributors),
 [issues](https://github.com/microbiome/OMA/issues), and other work in
-the background.
+the background. Finally, an increasing number of developers have
+started to support the TreeSummarizedExperiment class and miaverse as
+the basis for microbiome analysis, including the
+[curatedMetagenomicData](https://waldronlab.io/curatedMetagenomicData/)
+by Lucas Schiffer, Levi Waldron and others [@Pasolli2017].
 
 
 
