--- a/book.bib
+++ b/book.bib
@@ -1,3 +1,20 @@
+
+@Article{Pasolli2017,
+  author =	 {E Pasolli and L Schiffer and P Manghi and A Renson
+                  and V Obenchain and D Truong and F Beghini and F
+                  Malik and M Ramos and J Dowd and C Huttenhower and M
+                  Morgan and N Segata and Waldron L},
+  title =	 {Accessible, curated metagenomic data through
+                  ExperimentHub},
+  journal =	 {Nature Methods},
+  volume =	 14,
+  issue =	 11,
+  pages =	 {1023–1024},
+  year =	 2017,
+  doi =		 {10.1038/nmeth.4468}
+}
+
+
 @Book{Holmes2019,
   author =	 {Susan Holmes and Wolfgang Huber},
   title =	 {Modern Statistics for Modern Biology},
