--- a/13_microbiome_exploration.Rmd
+++ b/13_microbiome_exploration.Rmd
@@ -166,11 +166,10 @@ the function `plotAbundanceDensity` where most abundant taxa can be plotted
 including several options.
 
 In the following few demonstrations are shown, using the 
-[Lahti L et al. (2014)](https://doi.org/10.1038/ncomms5344) dataset.
+[@LahtiL2014] dataset.
 
 A Jitter plot based on relative abundance data, similar to the one presented at 
-[Salosensaari et al. 2021](https://www.nature.com/articles/s41467-021-22962-y) 
-supplementary figure 1, could be visualized as follows: 
+[@SaloS2021] supplementary figure 1, could be visualized as follows: 
 
 ```{r, warning=FALSE, message=FALSE}
 # Loading data
@@ -185,7 +184,7 @@ plotAbundanceDensity(tse, layout = "jitter", abund_values = "relabundance",
     scale_x_log10(label=scales::percent)
 ```
 
-Relative abundance values for top 5 taxa for instance can be visualized as a
+Relative abundance values for the top 5 taxa for instance can be visualized as a
 density plot over a log scaled axis, using "nationality" as an overlaying information:
 
 ```{r, warning=FALSE, message=FALSE}
