--- a/book.bib
+++ b/book.bib
@@ -519,3 +519,19 @@ Bioconductor},
     url = {https://www.jstor.org/stable/4615964},
     year = {1984}
 }
+
+@article{LahtiL2014,
+    author = {Lahti L et al.},
+    title = {Tipping elements in the human intestinal ecosystem},
+    journal = {Nature Communications},
+    doi = {https://doi.org/10.1038/ncomms5344},
+    year = {2014}
+}
+
+@article{SaloS2021,
+    author = {Salosensaari et al.},
+    title = {Taxonomic signatures of cause-specific mortality risk in human gut microbiome},
+    journal = {Nature Communications},
+    url = {https://www.nature.com/articles/s41467-021-22962-y},
+    year = {2021}
+}
