--- a/book.bib
+++ b/book.bib
@@ -520,18 +520,24 @@ Bioconductor},
     year = {1984}
 }
 
-@article{LahtiL2014,
+@article{Lahti2014,
     author = {Lahti L et al.},
     title = {Tipping elements in the human intestinal ecosystem},
     journal = {Nature Communications},
+    volume = {2014},
+    issue = {5},
+    pages = {1-10},
     doi = {https://doi.org/10.1038/ncomms5344},
     year = {2014}
 }
 
-@article{SaloS2021,
+@article{Salosensaari2021,
     author = {Salosensaari et al.},
     title = {Taxonomic signatures of cause-specific mortality risk in human gut microbiome},
     journal = {Nature Communications},
+    volume = {12},
+    issue = {1},
+    pages = {1-8},
     url = {https://www.nature.com/articles/s41467-021-22962-y},
     year = {2021}
 }
