Including full authors list.

--- a/book.bib
+++ b/book.bib
@@ -521,7 +521,7 @@ Bioconductor},
 }
 
 @article{Lahti2014,
-    author = {Lahti L et al.},
+    author = {Leo Lahti and Jarkko Salojärvi and Anne Salonen and Marten Scheffer and Willem M. de Vos},
     title = {Tipping elements in the human intestinal ecosystem},
     journal = {Nature Communications},
     volume = {2014},
@@ -532,7 +532,7 @@ Bioconductor},
 }
 
 @article{Salosensaari2021,
-    author = {Salosensaari et al.},
+    author = {Salosensaari, Aaro and Laitinen, Ville and Havulinna, Aki and Méric, Guillaume and Cheng, Susan and Perola, Markus and Valsta, Liisa and Alfthan, Georg and Inouye, Michael and Watrous, Jeramie and Long, Tao and Salido, Rodolfo and Sanders, Karenina and Brennan, Caitriona and Humphrey, Gregory and Sanders, Jon and Jain, Mohit and Jousilahti, Pekka and Salomaa, Veikko and Niiranen, Teemu},
     title = {Taxonomic signatures of cause-specific mortality risk in human gut microbiome},
     journal = {Nature Communications},
     volume = {12},
