Added info and link about iheatmapr

--- a/16_microbiome_community.Rmd
+++ b/16_microbiome_community.Rmd
@@ -79,7 +79,7 @@ ggplot(df, aes(x = SampleID, y = FeatureID, fill = clr_z)) +
   labs(x = "Samples", y = "Taxa")
 ```
 
-pheatmap is a package that provides methods to plot clustered heatmaps. 
+_pheatmap_ is a package that provides methods to plot clustered heatmaps. 
 
 ```{r pheatmap1}
 if(!require(pheatmap)){
@@ -126,7 +126,7 @@ taxa_dendrogram <- as.dendrogram(taxa_clusters)
 plot(taxa_dendrogram)
 ```
 
-Based on dendogram, we decide to create three clusters. 
+Based on dendrogram, we decide to create three clusters. 
 
 ```{r pheatmap3}
 # Creates clusters
@@ -154,13 +154,18 @@ taxa_clusters <- data.frame(cluster = taxa_clusters)
 row.names(taxa_clusters) <- rownames(tse_phylum_subset)
 
 # Creates data frame that includes sample type data
-sample_types <- colData(tse_phylum_subset)$SampleType
+sample_types <- unfactor(colData(tse_phylum_subset)$SampleType)
 sample_types <- data.frame(sample_types = sample_types)
 row.names(sample_types) <- colnames(tse_phylum_subset)
 
 pheatmap(mat, annotation_row = taxa_clusters, 
          annotation_col = sample_types )
 ```
+
+In addition to _pheatmap_ package, there are also other packages that provide 
+functions for more complex heatmaps. One example is _iheatmapr_ package. Examples
+of using it you can find from its 
+[vignette](https://docs.ropensci.org/iheatmapr/articles/full_vignettes/iheatmapr.html).
 
 ## Community typing
 
