--- a/book.bib
+++ b/book.bib
@@ -541,3 +541,33 @@ Bioconductor},
     url = {https://www.nature.com/articles/s41467-021-22962-y},
     year = {2021}
 }
+
+@Manual{R-bluster,
+    title = {bluster: Clustering Algorithms for Bioconductor},
+    author = {Aaron Lun},
+    year = {2021},
+    note = {R package version 1.3.0},
+    url = {https://bioconductor.org/packages/3.14/bioc/html/bluster.html},
+}
+
+@article{Pons2006,
+    author = {Pons, Pascal and Latapy, Matthieu},
+    year = {2006},
+    month = {01},
+    pages = {191-218},
+    title = {Computing Communities in Large Networks Using Random Walks.},
+    volume = {10},
+    journal = {J. Graph Algorithms Appl.},
+    doi = {10.7155/jgaa.00124}
+}
+
+@article{Blondel2008,
+    author = {Blondel, Vincent and Guillaume, Jean-Loup and Lambiotte, Renaud and Lefebvre, Etienne},
+    year = {2008},
+    month = {04},
+    pages = {},
+    title = {Fast Unfolding of Communities in Large Networks},
+    volume = {2008},
+    journal = {Journal of Statistical Mechanics Theory and Experiment},
+    doi = {10.1088/1742-5468/2008/10/P10008}
+}
