Fixing content and ref.

--- a/16_microbiome_community.Rmd
+++ b/16_microbiome_community.Rmd
@@ -227,10 +227,9 @@ if(!require(bluster)){
 }
 ```
 
-We compare two algorithms results, "short random walks"[@Pons2006] versus "louvain"[@Blondel2008]. 
+The algorithm used is "short random walks"[@Pons2006]. 
 Graph is constructed using different k values (the number of nearest neighbors to consider during graph construction) 
-using the clr assay data. Then plotting the communities using the earlier PCoA ordination.
-The results obtained using "short random walks":
+using the clr assay data. Then plotting the communities using the earlier PCoA ordination as a visual exploration aid.
 
 ```{r, message=FALSE, warning=FALSE}
 library(bluster)
@@ -257,28 +256,6 @@ plots <- lapply(k,ClustAndPlot)
 # Displaying plots in a grid
 (plots[[1]] + plots[[2]]) / (plots[[3]] + plots[[4]])
 ```
-
-using "louvain":
-
-```{r, message=FALSE, warning=FALSE}
-
-k <- c(2,3,5,10)
-ClustAndPlot2 <- function(x) {
-  graph_clusters <- clusterRows(t(assays(tse)$clr), NNGraphParam(k=x,cluster.fun="louvain"))
-euclidean_pcoa_df$communities <- graph_clusters
-ggplot(data = euclidean_pcoa_df, 
-                             aes(x=pcoa1, y=pcoa2,
-                                 color = communities)) +
-  geom_point() +
-  labs(x = "PC1",
-       y = "PC2",
-       title = paste0("k = ", x))
-}
-
-plots <- lapply(k,ClustAndPlot2)
-(plots[[1]] + plots[[2]]) / (plots[[3]] + plots[[4]])
-```
-
 
 ## Session Info {-}
 
