--- a/book.bib
+++ b/book.bib
@@ -543,7 +543,7 @@ Bioconductor},
 }
 
 @Manual{R-bluster,
-    title = {bluster: Clustering Algorithms for Bioconductor},
+    title = {{bluster: Clustering Algorithms for Bioconductor}},
     author = {Aaron Lun},
     year = {2021},
     note = {R package version 1.3.0},
@@ -555,19 +555,8 @@ Bioconductor},
     year = {2006},
     month = {01},
     pages = {191-218},
-    title = {Computing Communities in Large Networks Using Random Walks.},
+    title = {Computing Communities in Large Networks Using Random Walks},
     volume = {10},
-    journal = {J. Graph Algorithms Appl.},
+    journal = {Journal of Graph Algorithms and Applications},
     doi = {10.7155/jgaa.00124}
-}
-
-@article{Blondel2008,
-    author = {Blondel, Vincent and Guillaume, Jean-Loup and Lambiotte, Renaud and Lefebvre, Etienne},
-    year = {2008},
-    month = {04},
-    pages = {},
-    title = {Fast Unfolding of Communities in Large Networks},
-    volume = {2008},
-    journal = {Journal of Statistical Mechanics Theory and Experiment},
-    doi = {10.1088/1742-5468/2008/10/P10008}
 }
